fix overflow and added style on menu

--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,6 @@
   font-family: "Roboto";
 }
 
-body,
-#root {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
-}
-
 div[dir="ltr"] {
   border-radius: 4px;
 }
